<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Yamba 1</string>

  <string name="hintText">Please enter your 140-character tweet</string>
  <string name="buttonUpdate">Update</string>
  
  <string name="msgSetupPrefs">msgSetupPrefs</string>
  <string name="msgAllDataPurged">msgAllDataPurged</string>
  <string name="msgLastTimelineUpdate">LastTimelineUpdate</string>
  <string name="msgNotificationTitle">See New Status Timeline</string>
  <string name="msgNotificationMessage"># New Updates: %d</string>
  
  <string name="titleYamba">Yamba!</string>
  <string name="titleStatus">Status Update</string>
  <string name="titleUsername">Username</string>
  <string name="titlePassword">Password</string>
  <string name="titleApiroot">API Root</string>
  <string name="titlePrefs">Preferences</string>
  <string name="titleTimeline">Timeline</string>
  <string name="titleServiceStop">Service Stop</string>
  <string name="titleServiceStart">Service Start</string>
  <string name="titlePurge">Purge</string>
  <string name="titleProvider">Provider</string>
  <string name="titleUpdaterInterval">UpdaterInterval</string>
  
  <string name="summaryUsername">Please enter your Twitter username</string>
  <string name="summaryPassword">Please enter your Twitter password</string>
  <string name="summaryApiroot">URL of Yamba server</string>
  <string name="summaryProvider">Please select a provider</string>
  <string name="summaryUpdaterInterval">Please select an interval</string>
  
  <string name="send_timeline_notifications_permission_label">send_timeline_notifications_permission</string>
  <string name="send_timeline_notifications_permission_description">send_timeline_notifications_permission_description</string>
  <string name="receive_timeline_notifications_permission_label">receive_timeline_notifications_permission</string>
  <string name="receive_timeline_notifications_permission_description">receive_timeline_notifications_permission_description</string>
  
  <string-array name="providers">
    <item>None, please</item>
    <item>GPS via satellites!</item>
    <item>Mobile Network will do</item>
  </string-array>
  <string-array name="providerValues">
    <item>NONE</item>
    <item>gps</item>
    <item>network</item>
  </string-array>
  
  <string-array name="interval">
    <item>Never</item>
    <item>Fifteen seconds</item>
    <item>Half hour</item>
    <item>An hour</item>
    <item>Half day</item>
    <item>Day</item>
  </string-array>
  <string-array name="intervalValues">
    <item>0</item>
    <item>15000</item>
    <item>1800000</item>
    <item>3600000</item>
    <item>43200000</item>
    <item>86400000</item>
  </string-array>
</resources>
