<?xml version="1.0" encoding="utf-8"?>

<!-- Main Layout of Status Activity -->
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"  android:layout_height="match_parent"
  android:background="@drawable/background" >
  
  <!-- Title TextView -->
  <TextView  android:text="@string/titleYamba"
   	android:layout_width="match_parent"  android:layout_height="wrap_content"
    android:gravity="center"  android:layout_margin="10dp"
    android:textSize="30sp"  android:textColor="@android:color/white" />
  
  <!-- Text Counter TextView -->
  <TextView  android:id="@+id/textCount"  android:text="000"
    android:layout_width="wrap_content"  android:layout_height="wrap_content"
    android:layout_gravity="right"  android:layout_marginRight="10dp" />
  
  <!-- Status EditText -->
  <EditText  android:id="@+id/editText"  android:hint="@string/hintText"
    android:layout_width="match_parent"  android:layout_height="0px"
    android:layout_weight="1"   
    android:gravity="top|center_horizontal"  android:background="#cfff" />
  
  <!-- Update Button -->
  <Button  android:id="@+id/buttonUpdate"  android:text="@string/buttonUpdate"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:textSize="20sp" />
    
</LinearLayout>